--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "framer-motion": "^12.5.0",
     "lucide-react": "^0.476.0",
     "next": "15.1.7",
     "react": "^18.3.1",
